test/sema/typeck/mutating/mutating-on-standalone-fn.out
error: misplaced annotation `mutating`.
--> mutating-on-standalone-fn.dora:1:1
 | mutating fn foo() {}
   ~~~~~~~~
 | 
1 error found.
